fixed styling of the location and time on small screens

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1,6 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500,700');
 @import "weather";
 
+/*Screen Sizes*/
+@screen-small: 768px;
+@screen-small-less: 767px;
+@screen-medium: 992px;
+@screen-medium-less: 991px;
+@screen-large: 1200px;
+@screen-large-less: 1199px;
+
 .modal{
   color: black;
 }
